load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_package_library(
    name = "robot_plans",
    deps = [
        ":contact_aware_plan",
        ":joint_space_plan",
        ":plan_base",
        ":task_space_plan",
    ],
)

drake_cc_library(
    name = "plan_base",
    srcs = ["plan_base.cc"],
    hdrs = ["plan_base.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//common:essential",
        "//common/trajectories",
    ],
)

drake_cc_library(
    name = "joint_space_plan",
    srcs = ["joint_space_plan.cc"],
    hdrs = ["joint_space_plan.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":plan_base",
    ],
)

drake_cc_library(
    name = "task_space_plan",
    srcs = ["task_space_plan.cc"],
    hdrs = ["task_space_plan.h"],
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":plan_base",
        "//common:find_resource",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_library(
    name = "contact_aware_plan",
    srcs = ["contact_aware_plan.cc"],
    hdrs = ["contact_aware_plan.h"],
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":task_space_plan",
        "//common:find_resource",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//solvers:gurobi_solver",
        "//solvers:mathematical_program_lite",
        "//solvers:solve",
    ],
)

install_data()

add_lint_tests()
